examples/passing/2609/Eg.purs
module Eg (Foo'(Bar')) where

data Foo' = Bar'
