examples/failing/ExportConflictCtor/B.purs
module B where

data T2 = X
